# kyleh

./: .gitconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  100_PERCENT_ACHIEVEMENT.md  API.md  CHANGES.md  CODE_AUDIT_REPORT.md  Dockerfile  GITHUB_SYNC_COMPLETE.md  ImplementationPlan.md  LICENSE  LOCAL_MODELS.md  Makefile  PLUGIN_DEVELOPMENT.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  READY.md  SAFETY.md  SECURITY.md  SETUP.bat  TUNING.md  UNICODE_CHARACTERS.md  UNICODE_SOLUTION_SUMMARY.md  assistant_cli.py  backend_frontend_mapping.md  check-wsl-status.ps1  config.json  copilot-implementation-plan-email.txt  environment.yml  gpu_monitor.py  import asyncio.py  init_github.py  install-vs-buildtools-cpp.ps1  install_service.py  mcp.json  ml_optimizer.py  monitor.py  package.ps1  (+11 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  copilot-implementation-plan.md
.github/instructions/: codacy.instructions.md
.github/workflows/: auto-merge.yml  auto-triage.yml  ci.yml  codacy-trivy.yml  codeql.yml  pr-helper.yml  pr-risk-guard.yml  python-ci.yml  unicode-check.yml
BACKUP_20251126/: ml_optimizer.py  monitor.py  security_scanner.py
Command logs/: command_log.txt
Development/.github/: dependabot.yml
Repos/: JOURNEY_LOG.md  add-chapter.ps1  journal_bootstrap.ps1
SecurityBot/: alerting_system.py  auth_system.py  database_integration.py  deploy.py  deployment_verification.py  deployment_verification_simple.py  enhanced_dashboard.py  reporting_system.py  rest_api.py  security_bot_main.py  threat_detection.py  ui_ux_manager.py
VSCode info to ky/: action_log.txt  auto_manage.ps1
scripts/: backup.ps1  bench.ps1  build_ollama.ps1  chatops_trigger.ps1  codacy_check.ps1  coverage.ps1  export_local_models.ps1  format.ps1  generate_docs.ps1  install_deps.ps1  install_ollama_autostart.ps1  lint.ps1  list_models.ps1  notify.ps1  ollama.desktop  ollama.plist  ollama_watchdog.ps1  release.ps1  run_ollama_model.ps1  run_ollama_server.ps1  run_static_server.ps1  scheduled_tasks.md  setup.ps1  test_integration.ps1  update_models.ps1
system_monitor/: Untitled-1.txt  __init__.py  monitor.py  version.py
tests/: test_security_monitor_backend.py  test_security_monitor_frontend.py
tools/: EXAMPLES.md  README.md  find_unicode.py  pre-commit-hook-example.sh  test_unicode_support.py  unicode_to_ascii.py
(+20 files in other folders)
