[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "system-monitor"
version = "0.1.0"
description = "System security monitoring tool"
readme = "README.md"
authors = [
    { name = "Kyle H" }
]
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
]

dependencies = [
    "psutil>=5.9.0",
    "wmi>=1.5.1; sys_platform == 'win32'",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.pyright]
include = [
    "system_monitor",
    "tests",
]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = "warning"
reportMissingModuleSource = "warning"
pythonVersion = "3.8"
pythonPlatform = "Windows"

[tool.pylance]
python.analysis.typeCheckingMode = "strict"
python.analysis.diagnosticMode = "workspace"
python.analysis.useLibraryCodeForTypes = true
# python.analysis.diagnosticSeverityOverrides = {
#     "reportMissingModuleSource": "warning",
#     "reportMissingImports": "error",
#     "reportMissingTypeStubs": "warning"
# }

